# Fetchbot-Grasping-Simulation

./: README.md  run.sh
fetch_pickplace/fetch_pickplace/: CMakeLists.txt  package.xml
fetch_pickplace/fetch_pickplace/launch/: pickplace_playground.launch
fetch_pickplace/fetch_pickplace/worlds/: pick_place_world.sdf
matlab/: BlueScanner.m  Scanner.m  main.m
matlab_moveit_bridge/: CMakeLists.txt  package.xml
matlab_moveit_bridge/src/: backup.txt  bridge_node.py  geometry_msgs.msg
